Explain 'module-info.test' purpose and usage